--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "install": "^0.13.0",
+    "leaflet": "^1.6.0",
     "mdbreact": "^4.27.0",
+    "npm": "^6.14.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
