--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   },
   "main": "server.js",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "leaflet": "^1.6.0",
     "mdbreact": "^4.27.0",
     "mongoose": "^5.3.16",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
     "react-scripts": "^3.4.1"
   },
   "devDependencies": {
