--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "main": "server.js",
   "dependencies": {
+    "@auth0/auth0-react": "^1.0.0",
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
