--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,9 @@
     "@testing-library/user-event": "^7.2.1",
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
-    "react-router-dom": "^5.2.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
