--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "recharts": "^1.8.5"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
