added GET call for favs, crrct api later, DB working on local

--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "real-estate",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@auth0/auth0-react": "^1.0.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -35,8 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:3001"
-
-
+  }
 }
